[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"  # Adjusted Python version
numpy = "^1.22.2"
transformers = "^4.36.2"
jsonlines = "^4.0.0"
tensorflow = "^2.15.0"  # Standard TensorFlow package

# Conditional dependency for tensorflow-metal, specifically for macOS with Apple Silicon (arm64)
tensorflow-metal = {version = "^1.1.0", platform = "darwin", markers = "platform_machine == 'arm64'"}

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
toml = "^0.10.2"
poetry = {url = "https://storage.googleapis.com/poetry-bundles/poetry-1.1.15-py2.py3-none-any.whl"}
urllib3 = "1.26.15"
data-science-types = "0.2.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
